[tool.poetry]
name = "pandas-checks"
version = "0.2.0"
description = "Non-invasive health checks for Pandas method chains"
authors = ["Chad Parmet <cparmet@gmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/cparmet/pandas-checks"
documentation = "https://cparmet.github.io/pandas-checks/"
keywords = ["pandas", "method chains", "data science", "data engineering"]

[tool.poetry.urls]
"Issues" = "https://github.com/cparmet/pandas-checks/issues"

[tool.poetry.dependencies]
python = "^3.8"
emoji = ">=2.12.1"
ipython = ">=7.23.1"
Jinja2 = ">=3.1.4"
matplotlib = ">=3.5.3"
pandas = ">=1.4,<3.0"
termcolor = ">=2.3.0"

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.16.2"
pre-commit = "3.5.0" # Pin to fix trouble
pytest = "^8.2.2"
pytest-cases = "^3.8.5"
pyarrow = "^16.1.0"
openpyxl = "^3.1.4"
setuptools = ">=65.0.0"
mkdocs = "^1.6.0"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-material = "^9.5.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
