[project]
name = "pandas-checks"
version = "1.0.0"
description = "Non-invasive health checks for Pandas method chains"
authors = [{name = "Chad Parmet", email= "cparmet@gmail.com"}]
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["pandas", "method chains", "data science", "data engineering"]
requires-python = ">=3.9"
dependencies = [
    "emoji>=2.12.1",
    "ipython>=7.23.1",
    "Jinja2>=3.1.4",
    "matplotlib>=3.5.3",
    "pandas>=1.4,<3.0",
    "termcolor>=2.3.0",
    "tornado>=6.5.0",
]

[project.urls]
repository = "https://github.com/cparmet/pandas-checks"
documentation = "https://cparmet.github.io/pandas-checks/"
issues =  "https://github.com/cparmet/pandas-checks/issues"

[dependency-groups]
# Development dependencies will be installed by default in uv run and uv sync, but will not appear in the project's published metadata.
dev = [
    "ipykernel>=6.16.2",
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.25.1",
    "mkdocs-material>=9.5.27",
    "nox-uv>=0.3.0",
    "pre-commit==3.5.0", # Pin to fix trouble
    "setuptools>=65.0.0",
]
test = [
    "openpyxl>=3.1.4",
    "pyarrow>=16.1.0",
    "pytest>=8.2.2",
    "pytest-cases>=3.8.5",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
module-root = ""
